--- a/configs/external-dns/rbac.yaml
+++ b/configs/external-dns/rbac.yaml
@@ -19,6 +19,10 @@ rules:
   - apiGroups: [""]
     resources: ["nodes"]
     verbs: ["list"]
+  # Add etcd specific permissions
+  - apiGroups: ["etcd.database.coreos.com"]
+    resources: ["etcdclusters"]
+    verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
