--- a/configs/external-dns/deployment.yaml
+++ b/configs/external-dns/deployment.yaml
@@ -22,6 +22,11 @@ spec:
             - --source=ingress
             - --provider=coredns
             - --log-level=debug
+            - --domain-filter=home # Add domain filter
+            - --etcd-prefix=/skydns
+            - --etcd-urls=http://192.168.68.64:2379
+            - --txt-owner-id=k3s # Add explicit owner ID
+            - --interval=30s
           env:
             - name: ETCD_URLS
               value: http://192.168.68.64:2379
