--- a/configs/coredns/configmap.yaml
+++ b/configs/coredns/configmap.yaml
@@ -1,4 +1,3 @@
-# configs/coredns/configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -28,8 +27,11 @@ data:
         loop
         reload 5s
         loadbalance
+        log  # Add logging
     }
     home:53 {
+        errors
+        log  # Add logging
         etcd {
             stubzones
             path /skydns
