--- a/configs/external-dns/deployment.yaml
+++ b/configs/external-dns/deployment.yaml
@@ -24,19 +24,4 @@ spec:
             - --log-level=debug
           env:
             - name: ETCD_URLS
-              value: https://192.168.68.64:2379
-            - name: ETCD_CERT_FILE
-              value: /etc/kubernetes/pki/etcd/client.crt
-            - name: ETCD_KEY_FILE
-              value: /etc/kubernetes/pki/etcd/client.key
-            - name: ETCD_CA_FILE
-              value: /etc/kubernetes/pki/etcd/peer-ca.crt
-          volumeMounts:
-            - name: etcd-certs
-              mountPath: /etc/kubernetes/pki/etcd
-              readOnly: true
-      volumes:
-        - name: etcd-certs
-          hostPath:
-            path: /var/lib/rancher/k3s/server/tls/etcd
-            type: Directory
+              value: http://etcd.kube-system:2379
