--- a/modules/applications/generic/etcd.yaml
+++ b/modules/applications/generic/etcd.yaml
@@ -20,6 +20,12 @@ spec:
         service:
           type: ClusterIP
           port: 2379
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
