--- a/configs/external-dns/deployment.yaml
+++ b/configs/external-dns/deployment.yaml
@@ -1,34 +1,35 @@
-# configs/external-dns/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: external-dns
   namespace: kube-system
 spec:
-  strategy:
-    type: Recreate
   selector:
     matchLabels:
       app: external-dns
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
         app: external-dns
     spec:
+      serviceAccountName: external-dns
       containers:
         - name: external-dns
-          image: registry.k8s.io/external-dns/external-dns:v0.15.0
+          image: k8s.gcr.io/external-dns/external-dns:v0.13.1
           args:
+            - --source=service
             - --source=ingress
+            - --provider=coredns
             - --registry=etcd
-            - --etcd-urls=https://192.168.68.64:2379
-            - --etcd-ssl-ca=/etc/etcd/ssl/ca.crt
-            - --etcd-ssl-cert=/etc/etcd/ssl/client.crt
-            - --etcd-ssl-key=/etc/etcd/ssl/client.key
-
-            #    - --provider=coredns
-            #- --log-level=debug
-            #- --domain-filter=home # Add domain filter
+            - --etcd-urls=http://etcd.kube-system.svc.cluster.local:2379
+            - --domain-filter=home
+            - --txt-owner-id=k3s
+            - --log-level=debug
+              #    - --provider=coredns
+              #- --log-level=debug
+              #- --domain-filter=home # Add domain filter
           env:
             - name: ETCD_URLS
-              value: http://192.168.68.64:2379
+              value: http://etcd.kube-system.svc.cluster.local:2379
