--- a/modules/applications/generic/etcd.yaml
+++ b/modules/applications/generic/etcd.yaml
@@ -6,26 +6,9 @@ metadata:
 spec:
   project: system
   source:
-    repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: 11.0.8
-    chart: etcd
-    helm:
-      values: |
-        auth:
-          rbac:
-            enabled: false
-          client:
-            secureTransport: false
-            enableAuthentication: false
-        service:
-          type: ClusterIP
-          port: 2379
-        resources:
-          requests:
-            memory: "128Mi"
-            cpu: "100m"
-          limits:
-            memory: "256Mi"
+    repoURL: https://github.com/amunt0/argocd-apps
+    targetRevision: HEAD
+    path: configs/etcd
   destination:
     server: https://kubernetes.default.svc
     namespace: kube-system
@@ -33,5 +16,3 @@ spec:
     automated:
       prune: true
       selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
