--- a/configs/minio/deployment.yaml
+++ b/configs/minio/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: minio
-          image: minio/minio:RELEASE.2023-02-22T18-23-45Z
+          image: minio/minio:latest
           args:
             - server
             - --console-address=:9001
