--- a/configs/argocd/ingress.yaml
+++ b/configs/argocd/ingress.yaml
@@ -5,8 +5,12 @@ metadata:
   namespace: argocd
   annotations:
     cert-manager.io/cluster-issuer: "selfsigned-issuer"
+    kubernetes.io/ingress.class: "traefik"
+    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     traefik.ingress.kubernetes.io/router.tls: "true"
-    external-dns.alpha.kubernetes.io/hostname: argocd.home
+    external-dns.alpha.kubernetes.io/enabled: "true"
+    external-dns.alpha.kubernetes.io/hostname: "argocd.home"
+    external-dns.alpha.kubernetes.io/ttl: "60"
 spec:
   tls:
     - hosts:
