--- a/configs/external-dns/deployment.yaml
+++ b/configs/external-dns/deployment.yaml
@@ -26,7 +26,9 @@ spec:
             - --txt-owner-id=k3s
             - --domain-filter=home
             - --log-level=debug
-            - --request-timeout=30s # Add timeout parameter
+            - --request-timeout=30s
+            - --coredns-prefix=/skydns/
+            - --interval=30s
           env:
             - name: ETCD_URLS
               value: http://etcd.kube-system.svc.cluster.local:2379
