--- a/configs/argocd/ingress.yaml
+++ b/configs/argocd/ingress.yaml
@@ -24,6 +24,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: argo-cd-argocd-server
+                name: argocd-server-lb # Change this from argo-cd-argocd-server
                 port:
-                  number: 443
+                  number: 443 # Match this to your LoadBalancer service port
