--- a/configs/argocd/service.yaml
+++ b/configs/argocd/service.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "argocd.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
 spec:
   type: LoadBalancer
   ports:
