--- a/configs/external-dns/rbac.yaml
+++ b/configs/external-dns/rbac.yaml
@@ -11,7 +11,7 @@ metadata:
   name: external-dns
 rules:
   - apiGroups: [""]
-    resources: ["services", "endpoints", "pods", "nodes"]
+    resources: ["services", "endpoints", "pods"]
     verbs: ["get", "watch", "list"]
   - apiGroups: ["extensions", "networking.k8s.io"]
     resources: ["ingresses"]
