--- a/configs/pihole/deployment.yaml
+++ b/configs/pihole/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: pihole
-        image: pihole/pihole:2025.02.7
+        image: pihole/pihole:latest
         ports:
         - containerPort: 80
           name: http
