--- a/configs/external-dns/rbac.yaml
+++ b/configs/external-dns/rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: external-dns
-  namespace: kube-system
+  namespace: dns
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
