--- a/configs/external-dns/webhook-config.yaml
+++ b/configs/external-dns/webhook-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: external-dns-webhook-config
-  namespace: kube-system
+  namespace: dns
 data:
   config.json: |
     {
