--- a/configs/external-dns/deployment.yaml
+++ b/configs/external-dns/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: external-dns
-  namespace: kube-system
+  namespace: dns
 spec:
   selector:
     matchLabels:
@@ -17,13 +17,16 @@ spec:
       serviceAccountName: external-dns
       containers:
         - name: external-dns
-          image: k8s.gcr.io/external-dns/external-dns:v0.13.1
+          image: k8s.gcr.io/external-dns/external-dns:v0.15.1
           args:
             - --source=service
             - --source=ingress
-            - --provider=inmemory
-            - --registry=txt
-            - --txt-owner-id=k3s
-            - --domain-filter=home
-            - --log-level=debug
-            - --interval=1m
+            - --provider=pihole
+            - --registry=noop
+            - --pihole-server=http://pihole.dns.svc.cluster.local
+          securityContext:
+            fsGroup: 65534
+          envFrom:
+          - secretRef:
+             name: pihole-password              
+              
