--- a/configs/external-dns/kustomization.yaml
+++ b/configs/external-dns/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: dns
 resources:
-  #  - deployment.yaml
-  #- rbac.yaml
-  - deployment-updater.yaml  
+  - deployment.yaml
+  - rbac.yaml
+    #- deployment-updater.yaml  
