--- a/configs/external-dns/rbac.yaml
+++ b/configs/external-dns/rbac.yaml
@@ -1,20 +1,23 @@
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: external-dns
-  namespace: dns
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: external-dns
 rules:
-  - apiGroups: [""]
-    resources: ["services", "endpoints", "pods"]
-    verbs: ["get", "watch", "list"]
-  - apiGroups: ["extensions", "networking.k8s.io"]
-    resources: ["ingresses"]
-    verbs: ["get", "watch", "list"]
+- apiGroups: [""]
+  resources: ["services","endpoints","pods"]
+  verbs: ["get","watch","list"]
+- apiGroups: ["extensions","networking.k8s.io"]
+  resources: ["ingresses"]
+  verbs: ["get","watch","list"]
+- apiGroups: [""]
+  resources: ["nodes"]
+  verbs: ["list","watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -25,6 +28,6 @@ roleRef:
   kind: ClusterRole
   name: external-dns
 subjects:
-  - kind: ServiceAccount
-    name: external-dns
-    namespace: kube-system
+- kind: ServiceAccount
+  name: external-dns
+  namespace: dns
