--- a/configs/external-dns/deployment.yaml
+++ b/configs/external-dns/deployment.yaml
@@ -17,16 +17,18 @@ spec:
       serviceAccountName: external-dns
       containers:
         - name: external-dns
-          image: k8s.gcr.io/external-dns/external-dns:v0.15.1
+          image: registry.k8s.io/external-dns/external-dns:v0.15.1
           args:
             - --source=service
             - --source=ingress
             - --provider=pihole
             - --registry=noop
+            - --policy=upsert-only
             - --pihole-server=http://192.168.71.53
+            - --log-level=debug
           securityContext:
             fsGroup: 65534
           envFrom:
           - secretRef:
-             name: pihole-password              
+              name: pihole-password       
               
