--- a/configs/pihole/deployment.yaml
+++ b/configs/pihole/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: pihole
-        image: pihole/pihole:latest
+        image: pihole/pihole:2024.07.0
         ports:
         - containerPort: 80
           name: http
