--- a/configs/plex/ingress.yaml
+++ b/configs/plex/ingress.yaml
@@ -24,6 +24,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: plex
+                name: plex-server-lb
                 port:
-                  name: web
+                  number: 443
