--- a/configs/plex/service.yaml
+++ b/configs/plex/service.yaml
@@ -1,12 +1,46 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: plex-server-lb
+  namespace: media
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: "plex.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
+spec:
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 32400
+      name: http
+    - port: 443
+      targetPort: 32400
+      name: https
+    - port: 1900
+      targetPort: 1900
+      protocol: UDP
+      name: dlna-udp
+    - port: 3005
+      targetPort: 3005
+      name: gdm1
+    - port: 5353
+      targetPort: 5353
+      protocol: UDP
+      name: gdm2
+    - port: 8324
+      targetPort: 8324
+      name: gdm3
+  selector:
+    app: plex
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
   name: plex
   namespace: media
   labels:
     app: plex
-  annotations:
-    external-dns.alpha.kubernetes.io/hostname: "plex.home"
 spec:
   type: ClusterIP
   ports:
@@ -29,3 +63,4 @@ spec:
       name: gdm3
   selector:
     app: plex
+
