--- a/configs/nextcloud/service.yaml
+++ b/configs/nextcloud/service.yaml
@@ -1,17 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nextcloud
+  name: nextcloud-server-lb
   namespace: media
-  labels:
-    app: nextcloud
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "nextcloud.home"
+    external-dns.alpha.kubernetes.io/ingress-hostname-source: "service-annotation-only"
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 80
       name: http
+    - port: 443
+      targetPort: 80
+      name: https
   selector:
     app: nextcloud
